# bazel-compile-commands

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl  generate_compile_commands.py  pyproject.toml  regenerate_protos.sh
.github/workflows/: release-action.yml
bazel_protos/: BUILD.bazel  analysis_v2.proto  analysis_v2_pb2.py  analysis_v2_pb2.pyi  build_pb2.py  build_pb2.pyi
example/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  main.cc
