module(
    name = "bazel_compile_commands",
    version = "0.5.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "protobuf", version = "30.2")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python_3_11",
    python_version = "3.11",
)
use_repo(python, "python_3_11")
